[package]
name = "micro-kit"
version = "1.1.0"
authors = ["David Allen <david@datariot.io>", "Alexander Brugh <alexander.brugh@ey.com>"]
description = "A Microservice lib because I miss DropWizard."
license = "MIT"

[dependencies]
iron = "^0.5"
metrics = "^0.2"

serde = "^1.0.0"
serde_bytes = "^0.10.0"
serde_json = "^1.0.0"

rmp = "^0.8"
rmp-serde = "^0.13"

yaml-rust = "0.3"
log = "0.3"

[dependencies.chrono]
version = "^0.3"
features = ["serde"]

[dependencies.log4rs]
version = "0.5"
